# aoc-hs-cabal

./: LICENSE  README.md  cabal.project
solutions/: CHANGELOG.md  LICENSE  solutions.cabal
solutions/src/2024/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
